[package]
name = "rustkv"
version = "0.1.1"
edition = "2018"
authors = ["Xiangyi Meng <xymeng16@gmail.com>"]
description = "A key-value store"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
structopt = "0.3.22"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
