[package]
name = "rustkv"
version = "0.1.1"
edition = "2018"
authors = ["Xiangyi Meng <xymeng16@gmail.com>"]
description = "A key-value store"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
structopt = "0.3.22"
failure = "0.1.8"
failure_derive = "0.1.8"
serde = "1.0.126"
bson = { version = "2.0.0-beta.2", features = ["u2i"] }
log = "0.4.14"
simple_logger = "1.11.0"
function_name = "0.2.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.8"
failure_derive = "0.1.8"